# o2_report_server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: buildcontainer.yml  release.yml
src/: config.rs  lib.rs  main.rs  router.rs
src/cli/: mod.rs  utils.rs
